# flutter_system_icons

./: CONTRIBUTING.md  LICENSE  README.md  bridge.sh  build.yaml  flutter_rust_bridge.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/integration_test/: simple_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: flutter_system_icons.podspec
lib/: flutter_system_icons.dart
lib/src/application/: icon_service.dart  icon_service.g.dart
lib/src/domain/repositories/: icon_repository.dart
lib/src/infrastructure/: icon_repository_impl.dart  icon_repository_impl.g.dart
lib/src/presentation/widgets/: icon_widget.dart
lib/src/rust/: frb_generated.dart
linux/: CMakeLists.txt
macos/: flutter_system_icons.podspec
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: common.rs  mod.rs
rust/src/api/platform_specific/: macos.rs  mod.rs  unsupported.rs  windows.rs
windows/: CMakeLists.txt
(+1 files in other folders)
